--- a/curvenote.yml
+++ b/curvenote.yml
@@ -2,7 +2,7 @@ version: 1
 web:
   name: Curvenote
   domains:
-    - blog.curve.space
+    - rowanc1.curve.space
   logo: public/logo.svg
   logoText: Curvenote
   twitter: curvenote
@@ -24,5 +24,9 @@ web:
       folder: content/2020
       path: content/2020
   actions:
-    - title: Learn More
-      url: https://docs.curvenote.com/web
+    - title: Sign Up
+      url: https://curvenote.com/signup
+frontmatter:
+  venue: Curvenote
+  license: CC-BY-4.0
+  open_access: true
