--- a/curvenote.yml
+++ b/curvenote.yml
@@ -2,7 +2,7 @@ version: 1
 web:
   name: Curvenote
   domains:
-    - rowanc1.curve.space
+    - blog.curvenote.com
   logo: public/logo.svg
   logoText: Curvenote
   twitter: curvenote
