--- a/curvenote.yml
+++ b/curvenote.yml
@@ -1,6 +1,6 @@
 version: 1
-web:
-  name: Curvenote
+site:
+  title: Curvenote
   domains:
     - blog.curvenote.com
   logo: public/logo.svg
@@ -13,20 +13,17 @@ web:
       url: /2021
     - title: '2020'
       url: /2020
-  sections:
-    - title: '2022'
-      folder: content/2022
-      path: content/2022
-    - title: '2021'
-      folder: content/2021
-      path: content/2021
-    - title: '2020'
-      folder: content/2020
-      path: content/2020
+  projects:
+    - path: content/2022
+      slug: '2022'
+    - path: content/2021
+      slug: '2021'
+    - path: content/2020
+      slug: '2020'
   actions:
     - title: Sign Up
       url: https://curvenote.com/signup
-frontmatter:
-  venue: Curvenote
-  license: CC-BY-4.0
-  open_access: true
+  frontmatter:
+    venue: Curvenote
+    license: CC-BY-4.0
+    open_access: true
