--- a/content/2022/_toc.yml
+++ b/content/2022/_toc.yml
@@ -4,6 +4,9 @@
 format: jb-book
 root: from-jupyter-notebook-to-scientific-paper
 parts:
+  - caption: Weeknotes
+    chapters:
+      - file: weeknotes-05-30
   - caption: Articles
     chapters:
       - file: from-jupyter-notebook-to-scientific-paper
