--- a/content/2020/curvenote.yml
+++ b/content/2020/curvenote.yml
@@ -1,5 +1,6 @@
 version: 1
 project:
   title: '2020'
-  frontmatter:
-    subject: '2020'
+  subject: '2020'
+  license: CC-BY-4.0
+  open_access: true
