--- a/content/blog/_toc.yml
+++ b/content/blog/_toc.yml
@@ -2,10 +2,11 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: creating-an-open-research-website
+root: index
 parts:
   - caption: Blog
     chapters:
+      - file: creating-an-open-research-website
       - file: international-data-week-metadata-reproducibility
       - file: future-of-research-communication-and-collaboration
       - file: deploy-a-scientific-website-in-five-minutes
