Have a backup blog url

--- a/curvenote.yml
+++ b/curvenote.yml
@@ -3,6 +3,7 @@ site:
   title: Curvenote Blog
   domains:
     - blog.curvenote.com
+    # - curvenote-blog.curve.space
   logo: public/logo.svg
   logoText: Curvenote
   twitter: curvenote
