--- a/content/blog/_toc.yml
+++ b/content/blog/_toc.yml
@@ -6,6 +6,7 @@ root: index
 parts:
   - caption: Blog
     chapters:
+      - file: mike-morrison-joins-curvenote
       - file: architecture-of-a-myst-website
       - file: writing-a-scientific-paper-faster-myst-markdown
       - file: how-to-use-latex-with-myst-markdown
