--- a/content/blog/myst.yml
+++ b/content/blog/myst.yml
@@ -33,3 +33,6 @@ project:
     JSON: JavaScript Object Notation
     TLA: Three Letter Acronym
     OA: Open Access
+    ESS: Earth and Space Science Journal, AGU
+    AGU23: American Geophysical Union Annual Meeting (2023, San Francisco)
+    AGU: American Geophysical Union
