--- a/content/blog/_toc.yml
+++ b/content/blog/_toc.yml
@@ -6,6 +6,7 @@ root: index
 parts:
   - caption: Blog
     chapters:
+      - file: publishing-computational-articles
       - file: jupytercon-2023-takeaways
       - file: mike-morrison-joins-curvenote
       - file: architecture-of-a-myst-website
