--- a/myst.yml
+++ b/myst.yml
@@ -37,6 +37,8 @@ project:
     AGU23: American Geophysical Union Annual Meeting (2023, San Francisco)
     AGU: American Geophysical Union
     JOSS: Journal of Open Source Software
+    APC: article processing charge
+    CDL: Creative Destruction Lab
   references:
     3dem7: https://www.appliedgeophysics.org/articles/2023-heagy-oldenburg-3dem7
     docs: https://curvenote.com/docs/
